@@ -118,6 +118,10 @@ namespace Astroid {
     default_config.put ("editor.gvim.args", "-f -c 'set ft=mail' '+set fileencoding=utf-8' '+set ff=unix' '+set enc=utf-8'"); //  '+/^\\s*\\n/' '+nohl'
     default_config.put ("editor.charset", "utf-8");
 
+    /* mail composition */
+    default_config.put ("mail.reply.quote_line", "Excerpts from %1's message of %2:"); // %1 = author, %2 = pretty_verbose_date
+    default_config.put ("mail.forward.quote_line", "Forwarding %1's message of %2:"); // %1 = author, %2 = pretty_verbose_date
+
     /* contacts (not in use)
     default_config.put ("contacts.lbdb.cmd", "lbdb");
     default_config.put ("contacts.lbdb.enable", false);
