@@ -6,6 +6,7 @@
   marked threads with '+'.
 * Show attached icon in thread-view.
 * #18: Fix display of &amp; and friends.
+* Configurable quote string for replying and forwarding.
 
 == v0.3 / 2015-05-27
 
